# gpaw-weaver

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-libvdwxc-ubuntu.sh  install-libxc-ubuntu.sh  siteconfig.py
src/gpaw_weaver/: __init__.py  calculations.py  log.py  params.py
tests/: conftest.py  helpers.py  test_calculations.py  test_log.py  test_params.py
